--- a/public/css/main.css
+++ b/public/css/main.css
@@ -104,7 +104,7 @@ body{background:url(/img/background.png)}
 .card-container{width:623px;height:527px;position:absolute;top:10%;left:50%;margin-left:-311.5px}
 .bunting{border-top:1px solid #FDB813}
 .triangle{width:0;height:0;border-style:solid;border-width:21.7px 12.5px 0;border-color:#FDB813 transparent transparent;display:inline-block}
-.card{width:480px;height:380px;padding-top:20px;text-align:center;color:#335767;background-color:ivory;position:absolute;top:100px;left:50%;margin-left:-240px;visibility:hidden;z-index:20}
+.card{width:480px;height:380px;padding-top:20px;text-align:center;color:#335767;background-color:ivory;position:absolute;top:50px;left:50%;margin-left:-240px;visibility:hidden;z-index:20}
 .card .content{width:240px;margin:0 auto}
 .sunset:before{content:"";display:block;height:35px;width:70px;margin:0 auto;border-radius:70px 70px 0 0;background:#FDB813;-webkit-box-shadow:0 -3px 10px 0 #FDB813;box-shadow:0 -3px 10px 0 #FDB813}
 .script.dbl-border:before{content:"";margin:0 auto -8px;border-bottom:1px solid #78CDF3;display:block}
@@ -116,7 +116,7 @@ body{background:url(/img/background.png)}
 .back,.envelope,.flap,.front,.pocket{width:100%;height:100%;text-align:center;-webkit-transform-style:preserve-3d;transform-style:preserve-3d;position:relative}
 .back,.front{-webkit-backface-visibility:hidden;backface-visibility:hidden;position:absolute;top:0;left:0}
 .front{padding-top:20px;background:url(/img/envelope-background.jpg);z-index:100}
-.stamp{background:url(/img/stamp.jpg) no-repeat;-webkit-background-size:cover;background-size:cover;width:200px;height:100px;position:absolute;top:20px;right:20px}
+.stamp{background:url(/img/stamp.jpg) no-repeat;-webkit-background-size:cover cover;background-size:cover;width:200px;height:100px;position:absolute;top:20px;right:20px}
 .addressee{height:50px;margin:auto;position:absolute;top:0;bottom:0;left:0;right:0}
 .addressee h2{font-size:40px;line-height:50px;text-decoration:underline}
 .back{background:url(/img/envelope-background.jpg)}
