--- a/public/myth/components/card.css
+++ b/public/myth/components/card.css
@@ -13,7 +13,7 @@
 	color: var(--colour-turq);
 	background-color: var(--colour-card);
 	position: absolute;
-	top: 100px;
+	top: 50px;
 	left: 50%;
 	margin-left: -240px;
 	visibility: hidden;
